feat: add i18n and translations

--- a/pages/article/Article.module.css
+++ b/pages/article/Article.module.css
@@ -61,7 +61,7 @@
 
 .content>img {
     border-radius: 16px;
-    margin-bottom: 16px;
+    margin: 16px 0;
     width: 100%;
     height: auto;
 }
@@ -86,6 +86,11 @@
     font-size: 16px;
     color: #333647;
     margin: 12px 0;
+}
+
+.content>ul {
+    padding-left: 20px;
+    margin-bottom: 16px;
 }
 
 .icon {
