--- a/components/Section/Section.module.css
+++ b/components/Section/Section.module.css
@@ -2,13 +2,14 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin-bottom: 24px;
+    margin: 24px 0 24px 0;
 }
 
 .title {
     font-size: 20px;
     font-weight: 600;
     line-height: 24px;
+    color: var(--black-primary);
 }
 
 .link {
