--- a/pages/article/Article.module.css
+++ b/pages/article/Article.module.css
@@ -46,7 +46,7 @@
 }
 
 .content {
-    background-color: #fff;
+    background-color: var(--white-primary);
     padding: 24px 20px 20px;
     border-radius: 24px 24px 0px 0px;
     top: -24px;
@@ -69,7 +69,7 @@
 .content>h2 {
     font-weight: 600;
     font-size: 24px;
-    color: #333647;
+    color: var(--black-primary);
     margin: 16px 0;
     line-height: 32px;
 }
@@ -84,7 +84,7 @@
 .content>p {
     font-weight: 400;
     font-size: 16px;
-    color: #333647;
+    color: var(--gray-primary);
     margin: 12px 0;
 }
 
