--- a/components/ProfileButton/ProfileButton.module.css
+++ b/components/ProfileButton/ProfileButton.module.css
@@ -12,6 +12,10 @@
     margin-bottom: 16px;
 }
 
+.centered {
+    justify-content: center;
+}
+
 .selected {
     color: var(--white-primary);
     background-color: var(--purple-primary);
