--- a/components/CategoryTeaser/CategoryTeaser.module.css
+++ b/components/CategoryTeaser/CategoryTeaser.module.css
@@ -8,7 +8,21 @@
 
 .image {
     border-radius: 16px 16px 0px 0px;
+    object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+}
+
+.imageWrapper {
+    border-radius: 16px 16px 0px 0px;
+    width: 100%;
     height: 192px;
+    overflow: hidden;
+}
+
+.imageWrapper>div {
+    position: unset !important;
 }
 
 .textWrapper {
