--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -13,10 +13,10 @@
     height: 56px;
     width: 100%;
     padding: 0 12px 0 64px;
+    -webkit-appearance: unset;
 }
 
 .input::placeholder {
-    padding-top: 30px;
     color: var(--gray-primary);
 }
 
